--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,8 @@ dependencies = [
     "corner (>=2.2.3,<3.0.0)",
     "scipy (>=1.15.3,<2.0.0)",
     "scikit-learn (>=1.6.1,<2.0.0)",
-    "pyarrow (>=20.0.0,<21.0.0)"
+    "pyarrow (>=20.0.0,<21.0.0)",
+    "tqdm (>=4.67.1,<5.0.0)"
 ]
 
 [tool.poetry]
